--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
     </section>
 
     <!-- Beneficios del Limón -->
-    <section class="benefits" id="beneficios">
+    <section class="benefits benefits--with-bg" id="beneficios">
         <div class="benefits__container container">
             <h2 class="section__title" data-i18n="benefits.title">Beneficios del Limón</h2>
             <p class="benefits__intro" data-i18n="benefits.intro">El limón es una fruta de alto consumo en nuestra
